Fixes for compiling with mingw

--- a/Makefile.in
+++ b/Makefile.in
@@ -49,7 +49,7 @@ SVN_SERF_LIBS = @SVN_SERF_LIBS@
 SVN_SQLITE_LIBS = @SVN_SQLITE_LIBS@
 SVN_ZLIB_LIBS = @SVN_ZLIB_LIBS@
 
-LIBS = @LIBS@
+LIBS = @LIBS@ -lole32
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -160,7 +160,7 @@ CXXFLAGS = @CXXFLAGS@ $(EXTRA_CXXFLAGS)
 ### -Wmissing-declarations) are not valid for C++, and should be somehow
 ### suppressed (but they may come from httpd or APR).
 CPPFLAGS = @CPPFLAGS@ $(EXTRA_CPPFLAGS)
-LDFLAGS = @LDFLAGS@ $(EXTRA_LDFLAGS)
+LDFLAGS = @LDFLAGS@ $(EXTRA_LDFLAGS) -no-undefined
 SWIG_LDFLAGS = @SWIG_LDFLAGS@ $(EXTRA_SWIG_LDFLAGS)
 
 COMPILE = $(CC) $(CPPFLAGS) $(CFLAGS) $(INCLUDES)
