--- a/build.conf
+++ b/build.conf
@@ -564,6 +564,7 @@ install = test
 libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr aprutil apriconv apr
 msvc-static = yes
 undefined-lib-symbols = yes
+link-cmd = $(LINK_TESTS)
 
 # ----------------------------------------------------------------------------
 # Tests for libsvn_fs_base
@@ -574,6 +575,7 @@ type = exe
 path = subversion/tests/libsvn_fs_base
 sources = fs-base-test.c
 install = bdb-test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_fs_base libsvn_delta
        libsvn_fs_util libsvn_subr apriconv apr
 
@@ -583,6 +585,7 @@ type = exe
 path = subversion/tests/libsvn_fs_base
 sources = key-test.c
 install = bdb-test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs_base libsvn_subr apriconv apr 
 
 [strings-reps-test]
@@ -591,6 +594,7 @@ type = exe
 path = subversion/tests/libsvn_fs_base
 sources = strings-reps-test.c
 install = bdb-test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_fs_base libsvn_delta
        libsvn_subr apriconv apr
 
@@ -600,6 +604,7 @@ type = exe
 path = subversion/tests/libsvn_fs_base
 sources = changes-test.c
 install = bdb-test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_fs_base libsvn_delta
        libsvn_subr apriconv apr
 
@@ -611,6 +616,7 @@ type = exe
 path = subversion/tests/libsvn_fs_fs
 sources = fs-pack-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_fs_fs libsvn_delta
        libsvn_subr apriconv apr
 
@@ -623,6 +629,7 @@ type = exe
 path = subversion/tests/libsvn_fs
 sources = locks-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_delta libsvn_subr apriconv apr
 
 [fs-test]
@@ -631,6 +638,7 @@ type = exe
 path = subversion/tests/libsvn_fs
 sources = fs-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_fs libsvn_delta
        libsvn_subr aprutil apriconv apr
 
@@ -643,6 +651,7 @@ type = exe
 path = subversion/tests/libsvn_repos
 sources = repos-test.c dir-delta-editor.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_repos libsvn_fs libsvn_delta libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
@@ -654,6 +663,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = auth-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr
 
 [cache-test]
@@ -662,6 +672,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = cache-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [checksum-test]
@@ -670,6 +681,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = checksum-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [compat-test]
@@ -678,6 +690,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = compat-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [config-test]
@@ -686,6 +699,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = config-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [dirent_uri-test]
@@ -694,6 +708,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = dirent_uri-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [error-test]
@@ -702,6 +717,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = error-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [hashdump-test]
@@ -710,6 +726,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = hashdump-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [opt-test]
@@ -718,6 +735,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = opt-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [mergeinfo-test]
@@ -726,6 +744,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = mergeinfo-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [path-test]
@@ -734,6 +753,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = path-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [revision-test]
@@ -742,6 +762,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = revision-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apr
 
 [skel-test]
@@ -750,6 +771,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = skel-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [stream-test]
@@ -758,6 +780,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = stream-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [string-test]
@@ -766,6 +789,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = string-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [time-test]
@@ -774,6 +798,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = time-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [utf-test]
@@ -782,6 +807,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = utf-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [target-test]
@@ -790,6 +816,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = target-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 [translate-test]
@@ -798,6 +825,7 @@ type = exe
 path = subversion/tests/libsvn_subr
 sources = translate-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
@@ -809,6 +837,7 @@ type = exe
 path = subversion/tests/libsvn_delta
 sources = random-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_delta libsvn_subr apriconv apr
 
 [window-test]
@@ -817,6 +846,7 @@ type = exe
 path = subversion/tests/libsvn_delta
 sources = window-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_delta libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
@@ -828,6 +858,7 @@ type = exe
 path = subversion/tests/libsvn_client
 sources = client-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_delta libsvn_subr libsvn_client apriconv apr neon
 
 # ----------------------------------------------------------------------------
@@ -839,6 +870,7 @@ type = exe
 path = subversion/tests/libsvn_diff
 sources = diff-diff3-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_diff libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
@@ -850,6 +882,7 @@ type = exe
 path = subversion/tests/libsvn_ra_local
 sources = ra-local-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_ra_local libsvn_ra libsvn_fs libsvn_delta libsvn_subr
        apriconv apr neon
 
@@ -862,6 +895,7 @@ type = exe
 path = subversion/tests/libsvn_wc
 sources = tree-conflict-data-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_test libsvn_wc libsvn_subr apriconv apr
 
 # ----------------------------------------------------------------------------
@@ -876,6 +910,7 @@ type = exe
 path = subversion/tests/libsvn_delta
 sources = svndiff-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_delta libsvn_subr apriconv apr
 testing = skip
 
@@ -885,6 +920,7 @@ type = exe
 path = subversion/tests/libsvn_delta
 sources = vdelta-test.c
 install = test
+link-cmd = $(LINK_TESTS)
 libs = libsvn_delta libsvn_subr apriconv apr
 testing = skip
 
