Removed the restriction preventing the windows crypto extensions from being used when compiling with mingw32

--- a/Makefile.in
+++ b/Makefile.in
@@ -49,7 +49,7 @@ SVN_SERF_LIBS = @SVN_SERF_LIBS@
 SVN_SQLITE_LIBS = @SVN_SQLITE_LIBS@
 SVN_ZLIB_LIBS = @SVN_ZLIB_LIBS@
 
-LIBS = @LIBS@ -lole32
+LIBS = @LIBS@ -lole32 -lcrypt32
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
